# repgrow

./: .gitignore  Cargo.toml  Makefile  repomix-output.xml
src/: cli.rs  config.rs  lib.rs  main.rs
src/config/: app_config.rs  cache_config.rs  default_config.toml  http_config.rs  mod.rs  policy_config.rs  popularity_config.rs  quality_config.rs  rate_config.rs  search_config.rs  toml_utils.rs
src/domain/: candidate_move.rs  candidate_request.rs  centipawns.rs  color.rs  eval_line.rs  fen_key.rs  mod.rs  play_rate.rs  popularity_row.rs  repertoire_node.rs  signals.rs  uci.rs
src/domain/chess/: chess_file.rs  chess_piece_type.rs  chess_rank.rs  chess_square.rs  mod.rs  uci_move.rs
src/infra/: mod.rs
src/infra/cache/: kv_cache.rs  mem_cache.rs  mod.rs
src/infra/http/: mod.rs
src/infra/rate/: mod.rs
src/infra/scheduler/: mod.rs
src/infra/singleflight/: mod.rs
src/orchestration/: mod.rs
src/orchestration/orchestrators/: high_level_orchestrator.rs  mod.rs  node_expansion_orchestrator.rs
src/orchestration/structs/: candidate_selector.rs  child_enqueuer.rs  expansion_input.rs  expansion_planner.rs  mod.rs  (+6 more)
src/pgn/: json_writer.rs  mod.rs  pgn_writer.rs  repertoire_writer.rs  san_converter.rs  uci_str.rs
src/policy/: decision.rs  mod.rs  split_side_policy.rs
src/provider/: cloud_eval.rs  explorer.rs  mod.rs  move_popularity.rs  move_quality.rs  popularity_caps.rs  quality_caps.rs  types.rs
src/search/: arena.rs  build.rs  dispatcher.rs  mod.rs  orchestrator.rs  util.rs  worker.rs
tests/: contract_popularity.rs  contract_quality.rs  dummy_cli_integration.rs  dummy_integration.rs  pgn_golden.rs
(+9 files in other folders)
