[package]
name = "repgrow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
governor = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
shakmaty = { version = "0.24" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
urlencoding = "2.1.3"

[dev-dependencies]
proptest = "1.4"
