[package]
edition="2024"
name   ="repgrow"
version="0.1.0"

[dependencies]
anyhow            ="1"
async-trait       ="0.1"
clap              ={ version="4", features=["derive"] }
clap_builder      ="4.5.47"
dashmap           ="6"
derive_builder    ="0.20.2"
governor          ="0.6"
moka              ={ version="0.12", features=["future"] }
rand              ="0.8"
reqwest           ={ version="0.12", features=["brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde             ={ version="1", features=["derive"] }
serde_json        ="1"
shakmaty          ={ version="0.24" }
thiserror         ="1"
tokio             ={ version="1", features=["macros", "rt-multi-thread", "sync", "time"] }
toml              ="0.8"
tracing           ="0.1"
tracing-subscriber="0.3"
urlencoding       ="2.1.3"

[dev-dependencies]
proptest="1.4"
tempfile="3.22.0"
